--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
+<html lang ="en">
 <h1>aa</h1>
+<head>
+<meta charset="utf-8">
+<link rel="stylesheet" href="./css/style.css">
+</head>
+<a href = ./next.html>to next page</a>
